# korean-phonetics-transcriber

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs
docs/: index.html  style.css
docs/pkg/: web.d.ts  web.js  web_bg.js  web_bg.wasm  web_bg.wasm.d.ts
src/: arpabet.rs  hangul_builder.rs  ipa_to_hangul.rs  lib.rs  word_lookup.rs
