[package]
name = "cli"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "phonetics-to-hangul"
path = "src/main.rs"

[dependencies]
phonetics-to-hangul = { path = "../..", features = ["lookup"] }
structopt = "0.3.19"
anyhow = "1.0.33"
