[package]
name = "gui"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phonetics-to-hangul = { path = "../.." }
iui = { git = "https://github.com/rust-native-ui/libui-rs.git", branch = "trunk" }
